<resources>
    <string name="app_name">Exercise_1</string>
    <string name="tEmail">Email: </string>
    <string name="tPassword">Password: </string>
    <string name="bsignin">Sign-In</string>
    <string name="tData">Data Anda</string>
    <string name="tLogin">Login</string>
    <string name="txemail">Ini Hasil Email</string>
    <string name="txpassword">Ini Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="IDaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="button">save</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Konntak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
</resources>